# contact-api

./: .env.example  Cargo.toml  Dockerfile  deployment.yaml
helm/contact-api/: Chart.yaml
helm/contact-api/templates/: deployment.yaml  ingress.yaml
k8s/: ingress.yaml  service.yaml
scripts/: run.ps1
src/: main.rs
